MyOrg/src/objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>EC-EMEA</fullName>
                </value>
                <value>
                    <fullName>AMERICAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia/Pacific</fullName>
                </value>
                <value>
                    <fullName>America/NewYark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country_Code__c</columns>
        <columns>Region__c</columns>
        <columns>Time_Zone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>